--- a/package.json
+++ b/package.json
@@ -12,23 +12,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.2.2",
+    "@capacitor/core": "^5.2.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
-    "@ionic/react": "^7.0.0",
-    "@ionic/react-router": "^7.0.0",
+    "@ionic-native/deeplinks": "^5.36.0",
+    "@ionic/react": "^7.2.2",
+    "@ionic/react-router": "^7.2.2",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.4.0",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^3.1.2",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.2.2",
+    "@capacitor/cli": "^5.2.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
